--- a/docs/content/integrations/databricks.mdx
+++ b/docs/content/integrations/databricks.mdx
@@ -42,6 +42,7 @@ databricks_client_instance = databricks_client.configured(
     {
         "host": {"env": "DATABRICKS_HOST"},
         "token": {"env": "DATABRICKS_TOKEN"},
+        "legacy_api: False,  # This is required for backwards compatibility reasons until the `legacy_api` is removed.
     }
 )
 ```
@@ -80,8 +81,6 @@ def my_databricks_job():
 <TabItem name="Creating a custom op using resources">
 
 ```python startafter=start_define_databricks_custom_op endbefore=end_define_databricks_custom_op file=/integrations/databricks/databricks.py dedent=4
-from databricks_cli.sdk import DbfsService
-
 from dagster import (
     OpExecutionContext,
     job,
@@ -91,9 +90,8 @@ from dagster import (
 @op(required_resource_keys={"databricks"})
 def my_databricks_op(context: OpExecutionContext) -> None:
     databricks_api_client = context.resources.databricks.api_client
-    dbfs_service = DbfsService(databricks_api_client)
 
-    dbfs_service.read(path="/tmp/HelloWorld.txt")
+    databricks_api_client.dbfs.read(path="/tmp/HelloWorld.txt")
 
 @job(resource_defs={"databricks": databricks_client_instance})
 def my_databricks_job():
@@ -105,8 +103,6 @@ def my_databricks_job():
 <TabItem name="Creating a custom asset using resources">
 
 ```python startafter=start_define_databricks_custom_asset endbefore=end_define_databricks_custom_asset file=/integrations/databricks/databricks.py dedent=4
-from databricks_cli.sdk import JobsService
-
 from dagster import (
     AssetSelection,
     OpExecutionContext,
@@ -117,9 +113,8 @@ from dagster import (
 @asset(required_resource_keys={"databricks"})
 def my_databricks_table(context: OpExecutionContext) -> None:
     databricks_api_client = context.resources.databricks.api_client
-    jobs_service = JobsService(databricks_api_client)
 
-    jobs_service.run_now(job_id=DATABRICKS_JOB_ID)
+    databricks_api_client.jobs.run_now(job_id=DATABRICKS_JOB_ID)
 
 materialize_databricks_table = define_asset_job(
     name="materialize_databricks_table",
